# mpd-discord-rpc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  mpd-discord-rpc.service
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  rust.yml
nix/: package.nix  shell.nix
src/: album_art.rs  config.rs  defaults.rs  main.rs  mpd_conn.rs
