[package]
name = "mpd-discord-rpc"
version = "1.7.3"
authors = ["Jake Stanger <mail@jstanger.dev>"]
edition = "2024"
description = "Displays your currently playing song / album / artist from MPD in Discord using Rich Presence."
license = "MIT"
repository = "https://github.com/JakeStanger/mpd-discord-rpc"
readme = "README.md"
keywords = ["mpd", "discord", "rpc", "music", "mopidy"]

[dependencies]
discord-presence = { version = "1.6.0", features = ["activity_type"] }
mpd_client = "1.4.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
universal-config = { version = "0.5.0", default-features = false, features = ["toml"] }
mpd-utils = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
