[package]
name = "mpd-discord-rpc"
version = "1.10.0"
authors = ["Jake Stanger <mail@jstanger.dev>"]
edition = "2024"
description = "Displays your currently playing song / album / artist from MPD in Discord using Rich Presence."
license = "MIT"
repository = "https://github.com/JakeStanger/mpd-discord-rpc"
readme = "README.md"
keywords = ["mpd", "discord", "rpc", "music", "mopidy"]

[package.metadata.deb]
assets = [
    # Binary
    { source = "target/release/mpd-discord-rpc", dest = "usr/bin/", mode = "755"},
    # Systemd user service
    { source = "mpd-discord-rpc.service", dest = "usr/lib/systemd/user/", mode = "644"}
]

[dependencies]
discord-presence = { version = "3.2.0" }
mpd_client = "1.4.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
universal-config = { version = "0.5.1", default-features = false, features = ["toml", "save"] }
mpd-utils = "0.2.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
